styles.css
@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap");

html,
body {
  /* font-family: "Oxygen Mono", monospace; */
  font-family: "Quicksand", sans-serif;
  background-color: #212230;
  color: #ffffff;

  width: 100vw;
  overflow-x: hidden;
  margin: 0;

  scroll-behavior: smooth;
  scroll-padding-top: 100px;

  -webkit-font-smoothing: antialiased;
  display: inline-table;
}

header {
  position: fixed;
  top: 0;
  text-align: center;
  display: inline-block;
  width: 100vw;
  border-bottom: 5px solid #541e4a;
  text-shadow: 0px 0px 2px #ffffffaa;
  background-color: #212230;
  z-index: 10;
}

header a {
  transition: all 0.3s;
}

header a:hover {
  text-shadow: 0px 0px 8px #ffffff;
}

.header-thing {
  width: 100vw;
}

.title {
  display: inline-block;
  font-weight: bold;
  font-size: calc(2.5em + 1vw);
  padding: 0;
  margin: 20px 30px;
  width: fit-content;

  text-shadow: 0px 0px 10px #e165b6d6;
}

.contact-section a {
  color: #8bf0a4;
}

.nav-section {
  margin-left: 5px;
}

.nav-section a {
  color: #ecd2ff;
}

.skills-section {
  display: inline-grid;
  /* margin: 0 30px; */
  padding: 0 2vw;
  width: 35vw;
  height: calc(95vh - 100px);
}

.section-title {
  font-size: calc(1.5em + 1vw);
  margin: 20px 0;
  margin-bottom: 10px;
  border-bottom: 1px solid #fff;
  text-shadow: 0px 0px 5px #c5cdff;
}

.skills-list-list {
  overflow-y: scroll;
  /* border: 1px solid #52c4ad; */
  border-radius: 6px;
  padding-left: 20px;
}

.skills-list div {
  display: inline-table;
}

.skill {
  text-align: center;
  font-size: calc(1vw + 2px);
  margin-bottom: 10px;
  transition: text-shadow 0.5s;
}

.skill:hover {
  text-shadow: 0px 0px 3px #ffffb5;
  /* font-weight: bold; */
}

.skill img {
  width: calc((35vw - 85px) / 4);
  border-radius: 10px;
}

.project-section {
  display: inline-grid;
  width: 59vw;
  height: calc(95vh - 100px);
}

.middle {
  display: inline-table;
}

.project-list {
  overflow-y: scroll;
  /* border: 1px solid #52c4ad; */
  border-radius: 6px;
}

.project {
  display: inline-table;
  /* border: 1px solid #b7b7d5; */
  width: calc(50% - 22px);
  height: 350px;
  margin: 5px;
  padding-left: 10px;
  border-radius: 20px;
  /* background-color: #480f63; */
  background-color: #302941;
  transition: box-shadow 0.3s;
}

.project:hover {
  box-shadow: 0px 0px 6px #ece4f5c3;
}

.project img {
  width: 250px;
  border: 1px solid #52c4ad;
  border-radius: 10px;
  cursor: pointer;
  /* -5 px as well */
  /* margin: 0 calc(((59vw / 2 - 22px) - 250px) / 2 - 9px); */
}

@media only screen and (max-width: 1500px) {
  .project img {
    margin: 0 calc(((59vw / 2 - 22px) - 250px) / 2 - 9px);
  }
}

.project .left {
  display: inline-table;
  vertical-align: top;
  width: 38%;
}

.project .right {
  display: inline-table;
  vertical-align: top;
  width: 55%;
}

.project h3 {
  margin-left: 20px;
  font-size: 1.4em;
  text-shadow: 0px 0px 10px #cfc3d498;
  transition: all 0.5s;
}

.project:hover > h3 {
  text-shadow: 0px 0px 10px #d6d766;
}

.project a {
  color: #8bf0a4;
  margin-left: 24px;
}

.aboutme {
  text-align: center;
  font-size: 1.2em;
  /* margin: 20px 30px; */
  margin: auto;
  padding: 15px 20px;
  /* text-align: center; */
  width: 50%;
  box-shadow: 0 0 4px #ffffff;
  padding-top: 120px;
  /* margin-top: 500px; */
}

.aboutme a {
  color: #c8e6ff;
  transition: text-shadow 0.3s;
}

.aboutme a:hover {
  text-shadow: 0px 0px 8px #d6d7f5;
}

.resume-left {
  position: absolute;
  height: calc(100% - 120px);
  width: 40%;
}

.resume-right {
  position: absolute;
  width: 60%;
  height: calc(100% - 120px);

  left: 65%;
  transform: translateX(-50%);
}

.resume-title {
  font-size: calc(5vw + 1em);
  position: absolute;
  text-shadow: 0px 0px 15px #c3e100;
  top: calc(100% / 3);
  left: calc((100vw - (80vh * (8.5 / 11))) / 4); /* idk */
  transform: translate(-25%, -50%);
}

.resume-container {
  position: relative;
  display: block;
  overflow: hidden;
  margin: auto;
  margin-top: 20px;
  height: 80vh;
  width: 0%;
  padding-right: calc(80vh * (8.5 / 11));
  transition: box-shadow 0.35s;
  box-shadow: 0px 0px 10px #73a5e144;
}

.resume-container:hover {
  box-shadow: 0px 0px 15px #73b9c3;
}

.resume-click {
  position: absolute;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: none;
  z-index: 1;
  cursor: pointer;
}

.resume {
  position: absolute;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: none;
}

@media only screen and (max-width: 1200px) {
  .skill img {
    width: calc((35vw - 70px) / 3);
  }
}

@media only screen and (max-width: 1000px) {
  html,
  body {
    max-height: auto;
    overflow: auto;
    overflow-x: hidden;
  }
  .title {
    text-align: center;
    width: 100vw;
    margin-right: 0;
    margin-left: 0;
  }
  header {
    text-align: center;
  }
  .section-title {
    text-align: center;
  }
  .skills-section {
    width: calc(100% - 60px);
    margin: 20px;
    height: auto;
  }
  .skills-list-list {
    overflow-y: auto;
  }
  .project-section {
    margin: 0 30px;
    width: calc(100vw - 60px);
    height: auto;
  }
  .project-list {
    overflow-y: auto;
    max-height: none;
  }
  .project {
    width: calc(100% - 22px);
  }
  .project img {
    margin: 0;
  }
  .skill {
    font-size: calc(0.4em + 2vw);
  }
  .skill img {
    width: calc((100vw - 135px) / 5);
  }
  .aboutme {
    font-size: 1.2em;
    margin: auto;
    padding: 15px 20px;
    /* text-align: center; */
    width: 80%;
    box-shadow: 0 0 5px #ffffff;
    padding-top: 120px;
  }
  .resume-left {
    display: none;
  }
  .resume-right {
    position: absolute;
    width: 100%;
    /* height: 100%; */

    left: 50%;
    transform: translateX(-50%);
  }
}

@media only screen and (max-width: 650px) {
  .skill img {
    width: calc((100vw - 115px) / 3);
  }
  .resume-container {
    width: 90%;
    height: 0;
    padding-right: 0;
    padding-top: calc(90% * (11 / 8.5));
  }
}

@media only screen and (max-width: 500px) {
  .project img {
    /* margin-left: calc(((59vw / 2 - 22px) - 250px) / 2 - 9px); */
    margin: 0 calc(((100vw - 60px) - 250px) / 2 - 17px);
  }
}

::-webkit-scrollbar {
  border-radius: 50px;
  width: 10px;
}

::-webkit-scrollbar-track {
  border-radius: 50px;
  background-color: #589da615;
}

::-webkit-scrollbar-thumb {
  border-radius: 50px;
  background-color: #303f53;
  transition: all 1s;
}

::-webkit-scrollbar-thumb:hover {
  background-color: #3b5366;
}

